@@ -1,9 +1,8 @@
 #include <ctype.h>
+#include <stdarg.h>
 #include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
-
-#include "expr.h"
 
 /* Insert `str` at `where` in `target`. */
 void strins(char **target, char *str, int where){
@@ -100,14 +99,17 @@ char *strrstr(char *s1, char *s2){
 }
 
 void strclean(char **target){
+    if(!(*target))
+        return;
+
     while(isblank((*target)[0]))
-        memmove((*target), (*target) + 1, strlen((*target)));
+        memmove(*target, (*target) + 1, strlen(*target));
 
     if(strlen(*target) == 0)
         return;
 
-    while(isblank((*target)[strlen((*target)) - 1]))
-        (*target)[strlen((*target)) - 1] = '\0';
+    while(isblank((*target)[strlen(*target) - 1]))
+        (*target)[strlen(*target) - 1] = '\0';
 }
 
 int is_number_slow(char *str){
@@ -118,8 +120,8 @@ int is_number_slow(char *str){
     parse_expr(str, &error);
 
     if(error){
-        return 0;
         free(error);
+        return 0;
     }
 
     return 1;
@@ -140,10 +142,8 @@ int is_number_fast(char *str){
 }
 
 long strtol_err(char *str, char **error){
-    if(!str){
-        asprintf(error, "NULL argument `str`");
+    if(!str)
         return -1;
-    }
 
     char *endptr = NULL;
     long result = strtol(str, &endptr, 0);
@@ -157,10 +157,8 @@ long strtol_err(char *str, char **error){
 }
 
 double strtod_err(char *str, char **error){
-    if(!str){
-        asprintf(error, "NULL argument `str`");
+    if(!str)
         return -1.0;
-    }
 
     char *endptr = NULL;
     double result = strtod(str, &endptr);
@@ -171,4 +169,28 @@ double strtod_err(char *str, char **error){
     }
 
     return result;
+}
+
+int concat(char **dst, const char *src, ...){
+    if(!dst || !(*dst) || !src)
+        return 0;
+
+    size_t srclen = strlen(src);
+    size_t dstlen = strlen(*dst);
+
+    const size_t pad = 0x400;
+
+    /* We have no way of knowing how many bytes src will
+     * take up once format specifiers are substituted.
+     */
+    *dst = realloc(*dst, srclen + dstlen + pad);
+
+    va_list args;
+    va_start(args, src);
+
+    int w = vsnprintf(&(*dst)[strlen(*dst)], srclen + dstlen + pad, src, args);
+
+    va_end(args);
+
+    return w;
 }
