@@ -10,5 +10,6 @@ int is_number_slow(char *);
 int is_number_fast(char *);
 long strtol_err(char *, char **);
 double strtod_err(char *, char **);
+int concat(char **dst, const char *src, ...);
 
 #endif
